<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RMS</string>
    <string name="action_settings">Settings</string>
    <string name="notification_history">Log History</string>
    <string name="home">"Home"</string>
    <string name="settings">Settings</string>
    <string name="scheduling">Scheduling</string>
    <string name="start_time">"Start Time: "</string>
    <string name="time_hint">e.g. 8:00am</string>
    <string name="automated_power_on">Using Schedule:</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="stop_time">"Stop Time: "</string>
    <string name="movement_duration">&quot;Allowed Roaming Duration: &quot;</string>
    <string name="notification_frequency">&quot;Update Frequency: &quot;</string>
    <string name="in_minutes">in minutes</string>
    <string name="in_seconds">in seconds</string>
    <string name="alert_settings">Alert Settings</string>
    <string name="roaming_alert">Roaming Alert</string>
    <string name="notification">&quot;Notif: &quot;</string>
    <string name="alarm">"Alarm: "</string>
    <string name="sleepwalking_alert">Sleepwalking Alert</string>
    <string name="save">Save</string>

    <string name="home_title">RMS</string>
    <string name="recent_notif">Recent Logs</string>
    <string name="active_alerts">Active Alerts</string>
    <string name="menu">Menu</string>
    <string name="setup">Set Up</string>
    <string name="history">Log History</string>
    <string name="notif_log_title">Title</string>
    <string name="notif_log_date_and_time">Date and Time</string>
    <string name="notif_log_message_body">Message Body</string>
    <string name="update_time">Time</string>
    <string name="rms_logo">RMS Logo</string>
    <string name="device_setup">Device Setup</string>
    <string name="enter_verification_from_device">Enter verification from device</string>
    <string name="submit">Submit</string>
    <string name="space">" "</string>
    <string name="snooze_time">Snooze Time:</string>
    <string name="dependent_status">All Clear</string>
    <string name="enter_time">Enter Time</string>

</resources>
