<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:ignore="NewApi" >

    <TextView
        android:id="@+id/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="14dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/autoPowerOnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/schedulingText"
        android:layout_below="@+id/schedulingText"
        android:layout_marginTop="6dp"
        android:text="@string/automated_power_on" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/roamingAlertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alarmSettingsText"
        android:layout_below="@+id/alarmSettingsText"
        android:layout_marginTop="6dp"
        android:text="@string/roaming_alert"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/swAlertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roamingAlertText"
        android:layout_below="@+id/notifText1"
        android:layout_marginTop="15dp"
        android:text="@string/sleepwalking_alert"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/alarmText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/notifText2"
        android:layout_alignBottom="@+id/notifText2"
        android:layout_toLeftOf="@+id/alarmRASwitch"
        android:text="@string/alarm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/alarmSWSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/alarmText2"
        android:layout_alignLeft="@+id/alarmRASwitch"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/alarmText2"
        android:textOff="OFF"
        android:textOn="ON" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/notifSWSwitch"
        android:layout_marginTop="28sp"
        android:onClick="save"
        android:text="@string/save" />

    <TextView
        android:id="@+id/alarmSettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/moveDurationText"
        android:layout_below="@+id/textSnoozeTime"
        android:layout_marginTop="12dp"
        android:text="@string/alert_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/sensitivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopTimeText"
        android:layout_alignLeft="@+id/autoPowerOnText"
        android:layout_marginTop="36sp"
        android:layout_marginBottom="12dp"
        android:text="@string/sensitivity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notifText1"
        android:layout_below="@+id/autoTimeSwitch"
        android:layout_marginTop="18dp"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/alarmText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swAlertText"
        android:layout_alignLeft="@+id/alarmText2"
        android:text="@string/alarm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/alarmRASwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/alarmText1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/alarmText1"
        android:textOff="OFF"
        android:textOn="ON" />

    <Switch
        android:id="@+id/notifRASwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swAlertText"
        android:layout_alignTop="@+id/alarmText1"
        android:layout_toLeftOf="@+id/alarmText1"
        android:layout_toRightOf="@+id/notifText1"
        android:textOff="OFF"
        android:textOn="ON" />

    <Switch
        android:id="@+id/notifSWSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/alarmText2"
        android:layout_alignRight="@+id/notifRASwitch"
        android:layout_alignTop="@+id/alarmText2"
        android:layout_toRightOf="@+id/notifText1"
        android:textOff="OFF"
        android:textOn="ON" />

    <TextView
        android:id="@+id/schedulingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SettingsText"
        android:layout_below="@+id/SettingsText"
        android:text="@string/scheduling"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Switch
        android:id="@+id/autoTimeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/autoPowerOnText"
        android:layout_alignBottom="@+id/autoPowerOnText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="11dp"
        android:textOff="OFF"
        android:textOn="ON"
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/moveDurationText"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextMovDuration"
        android:layout_alignBottom="@+id/editTextMovDuration"
        android:layout_alignLeft="@+id/sensitivityText"
        android:layout_below="@+id/sensitivityText"
        android:text="@string/movement_duration"
        android:textSize="17dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    	<!--  -->

    <TextView
        android:id="@+id/textSnoozeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alarmSettingsText" 
        android:layout_below="@+id/editTextMovDuration"
        android:text="@string/snooze_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextSnoozeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textSnoozeTime"
        android:layout_toRightOf="@+id/textSnoozeTime"
        android:ems="10"
        android:hint="@string/in_minutes"
        android:inputType="number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/notifText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roamingAlertText"
        android:layout_below="@+id/roamingAlertText"
        android:layout_marginLeft="25dp"
        android:text="@string/notification"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/notifText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notifText1"
        android:layout_below="@+id/swAlertText"
        android:text="@string/notification"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/stopTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTimeText"
        android:layout_below="@+id/startTimeText"
        android:layout_marginTop="18dp"
        android:text="@string/stop_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextMovDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensitivityText"
        android:layout_toRightOf="@+id/moveDurationText"
        android:ems="10"
        android:hint="@string/in_minutes"
        android:inputType="number"
        android:textSize="16sp" >

        
    </EditText>

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startTimeText"
        android:layout_alignBottom="@+id/startTimeText"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/stopTimeText"
        android:ems="10"
        android:hint="@string/enter_time" />

    <EditText
        android:id="@+id/editTextStopTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stopTimeText"
        android:layout_alignBottom="@+id/stopTimeText"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/startTimeText"
        android:ems="10"
        android:hint="@string/enter_time" />


</RelativeLayout>

</ScrollView>